"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2010-03-29	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-53-scalable-01-30:
	  hacchpsim: completely fixed, regression tests passed!
		had forgotten to pass global_offset in context to 
		global ID lookup during data updating of event execution.


2010-03-25	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-53-scalable-01-29-a:
	  hacchpsim "mostly" to work with new scalability framework,
		few bugs left: nothing crashes, just wrong result.
	  Fixed unroll_context setup to use footprint-frame's for symbol lookup
		in simple_meta_instance_reference
		::lookup_globally_allocated_index().


2010-03-18	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-53-scalable-01-29:
	  global_entry_context::construct_global_footprint_frame():
		the variant that operates on meta_instance_reference_base:
		fixed handling of public process port case, 
		was constructing incorrect return frame from
		the wrong local/formal frame.
		Regression test case added: prsim/type-test-b, -c, -d.


	* HACKT-00-01-04-main-00-83-53-scalable-01-28:
	  footprint::get_instance<>(): recursive call to self forgot
		to pass is_top=false, causing a lookup bug.  Yikes!
		Regression test added: prsim/type-test-a.


2010-03-17	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-53-scalable-01-27:
	  SIM::state_base: implemented a 2-entry LRU hot-cache for
		global footrint frames, that falls back to using
		the tree cache.  Reason: high locality and frequent
		immediate re-use of most recent frame, by pid.
		Results in only a little speed-up, but still helpful.
		Not accounted in memory usage, too small.


2010-03-16	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-83-53-scalable-01-26: