@@ -3,7 +3,7 @@
 # a template makefile for testing, to be included in recursive invocations
 # Include this Makefile at the end of every subdirectoy's Makefile.am.
 # The counterpart header Makefile is "test/Make.test-head".
-#	$Id: Make.test-tail,v 1.95.2.9 2010/03/30 00:36:45 fang Exp $
+#	$Id: Make.test-tail,v 1.95.2.10 2010/03/31 00:33:14 fang Exp $
 
 # for test that depend on pre-install plug-ins
 # don't forget to pass -dlopen to assist searching for pre-install dependencies
@@ -163,9 +163,8 @@ include $(top_srcdir)/test/Make.test-cflat
 include $(top_srcdir)/test/Make.test-graph
 include $(top_srcdir)/test/Make.test-prsim
 include $(top_srcdir)/test/Make.test-vpi
-# temporary:
 include $(top_srcdir)/test/Make.test-chpsim
-# include $(top_srcdir)/test/Make.test-guile
+include $(top_srcdir)/test/Make.test-guile
 include $(top_srcdir)/test/Make.test-net
 
 BOGUS_TESTS +=
