@@ -1,5 +1,5 @@
 # "test/chpsim/bingcd/Makefile.am"
-#	$Id: Makefile.am,v 1.3.2.1 2010/01/22 23:42:03 fang Exp $
+#	$Id: Makefile.am,v 1.3.2.2 2010/03/31 00:33:15 fang Exp $
 # Test auto-Makefile for chpsim.  
 
 include $(top_srcdir)/test/Make.test-head
@@ -89,9 +89,7 @@ srcdir_EXTRA_DIST += \
 include $(top_srcdir)/test/Make.test-tail
 
 # clean up side-effect files from bitrouter tests
-# temporary:
-# HACKT_GUILE_CLEAN_IGNORE_PATTERNS +=
-HACKT_GUILE_CLEAN_IGNORE_PATTERNS = \
+HACKT_GUILE_CLEAN_IGNORE_PATTERNS += \
 	"*.hacchpsimscm-out.tmp"
 
 # additionsl search path for scheme scripts
